[WK2][EFL]REGRESSION (r141978): ewk_view_type_check api test failing https://bugs.webkit.org/show_bug.cgi?id=109038

Reviewed by Anders Carlsson.

EFL API is defensive by its nature and expects graceful handling of wrong function arguments
whereas webkit implementation code does not. This patch adds new 'toEwkViewChecked' function,
which provides handling of wrong arguments, to be used within EFL API layer code.

* UIProcess/API/efl/EwkView.cpp:
(toEwkView):

    EwkView* toEwkView(const Ewk_View_Smart_Data* smartData) is not exported anymore
    as it's used within EwkView class only.

(EwkView::handleTouchMove):
* UIProcess/API/efl/EwkView.h:
* UIProcess/API/efl/ewk_view.cpp:
(toEwkViewChecked):

Canonical link: https://commits.webkit.org/128222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143007 268f45cc-cd09-0410-ab3c-d52691b4dbfc