Source/WebKit2/UIProcess/API/efl/ewk_view.cpp
@@ -61,8 +61,20 @@
 using namespace WebKit;
 using namespace WebCore;
 
+static inline EwkView* toEwkViewChecked(const Evas_Object* evasObject)
+{
+    EINA_SAFETY_ON_NULL_RETURN_VAL(evasObject, 0);
+    if (!isEwkViewEvasObject(evasObject))
+        return 0;
+
+    Ewk_View_Smart_Data* smartData = static_cast<Ewk_View_Smart_Data*>(evas_object_smart_data_get(evasObject));
+    EINA_SAFETY_ON_NULL_RETURN_VAL(smartData, 0);
+
+    return smartData->priv;
+}
+
 #define EWK_VIEW_IMPL_GET_OR_RETURN(ewkView, impl, ...)                        \
-    EwkView* impl = toEwkView(ewkView);                                        \
+    EwkView* impl = toEwkViewChecked(ewkView);                                 \
     do {                                                                       \
         if (!impl) {                                                           \
             EINA_LOG_CRIT("no private data for object %p", ewkView);           \
